--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ input[type=file]::-webkit-file-upload-button{
 	<div class="container" id="cv-template">
 		<div class="row1  " id="cv-template" >
 			<div class=" text-center background  " id="first" >
-				<img src="NoImage.jpg" class="img-fluid myimg mt-4" alt="">
+				<img src=".\NoImage.jpg" class="img-fluid myimg mt-4" alt="">
 				<div class="container" id="presnol-info">
 				
 					
